[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/0aa3d267951bd82a79beb26b066c8081.jpg" type="Texture" id=1]
[ext_resource path="res://Utendo-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/levelselector.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 10
outline_size = 1
outline_color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="level" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -20.0
margin_top = -13.0
margin_right = 1900.0
margin_bottom = 1067.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="1" type="Button" parent="."]
margin_left = 19.0
margin_top = 36.0
margin_right = 39.0
margin_bottom = 56.0
custom_colors/font_color = Color( 0.909804, 0.360784, 0.0313726, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="2" type="Button" parent="."]
margin_left = 59.0
margin_top = 36.0
margin_right = 79.0
margin_bottom = 56.0
custom_colors/font_color = Color( 0.909804, 0.360784, 0.0313726, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "2"

[node name="3" type="Button" parent="."]
margin_left = 98.0
margin_top = 36.0
margin_right = 118.0
margin_bottom = 56.0
custom_colors/font_color = Color( 0.909804, 0.360784, 0.0313726, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "3"

[node name="voltar" type="Button" parent="."]
margin_left = 113.0
margin_top = 67.0
margin_right = 170.0
margin_bottom = 90.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
text = "voltar"

[node name="Selecione" type="Label" parent="."]
margin_left = 6.0
margin_top = 5.0
margin_right = 142.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0.956863, 0.376471, 0.0313726, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Selecione a fase"
align = 1

[connection signal="button_down" from="1" to="." method="_on_1_button_down"]
[connection signal="button_down" from="2" to="." method="_on_2_button_down"]
[connection signal="button_down" from="3" to="." method="_on_3_button_down"]
[connection signal="button_down" from="voltar" to="." method="_on_voltar_button_down"]
